# settings

./: .vimrc  README.md  machine_install.md
VisualStudioCode/: extensions.md  settings.json
WindowsCode++/: README.md  _new_project.cmd
WindowsCode++/_template_/: main.cpp  main.vcxproj
WindowsTerminal/: profiles.json  readme.txt
templates/c++/_cmake_/: .clang-format  CMakeLists.txt  dev_install.sh  gtest_install.sh
templates/c++/_cmake_/app/src/: CMakeLists.txt  main.cpp
templates/c++/_cmake_/lib/: CMakeLists.txt
templates/c++/_cmake_/lib/inc/cex/: StringUtil.hpp
templates/c++/_cmake_/lib/src/: CMakeLists.txt  StringUtil.cpp
templates/c++/_cmake_/lib/test/: CMakeLists.txt  StringUtil_test.cpp
templates/c++/_template_/: .clang-format  makefile
templates/c++/_template_/src/: main.cpp
